[gd_scene load_steps=20 format=3 uid="uid://cq3tykgg15qkd"]

[ext_resource type="PackedScene" uid="uid://ct3rcan86re81" path="res://Scenes/player.tscn" id="1_nsw6b"]
[ext_resource type="Script" uid="uid://cgge5upov1qgl" path="res://Scripts/game.gd" id="1_tcdmn"]
[ext_resource type="PackedScene" uid="uid://csykyo4ikmj0w" path="res://Scenes/Componentes/map.tscn" id="2_f2jw5"]
[ext_resource type="PackedScene" uid="uid://b2w3amblmdkc1" path="res://Scenes/Componentes/radio.tscn" id="3_glc8m"]
[ext_resource type="PackedScene" uid="uid://w0hrl0r07jba" path="res://Scenes/UI/ambient_crossfade.tscn" id="4_43er0"]
[ext_resource type="PackedScene" uid="uid://bjjxtn2tn0obg" path="res://Scenes/Componentes/news_paper.tscn" id="4_f2jw5"]
[ext_resource type="Script" uid="uid://d4kpru3vqxmy8" path="res://Scripts/UI/canvas_layer.gd" id="6_qwjex"]
[ext_resource type="PackedScene" uid="uid://cuc8r1mt88ftx" path="res://Scenes/Componentes/computer.tscn" id="6_yc4g0"]
[ext_resource type="PackedScene" uid="uid://ciwu0q5fei8fc" path="res://Scenes/Componentes/puerta.tscn" id="7_l50oi"]
[ext_resource type="PackedScene" uid="uid://bpcg4cb1udhug" path="res://Scenes/UI/pause_menu.tscn" id="8_lsgl7"]
[ext_resource type="PackedScene" uid="uid://ba3spl3lum1ow" path="res://Assets/3D/Escenario.blend" id="8_yc4g0"]
[ext_resource type="PackedScene" uid="uid://b8sgyrmmvcyh7" path="res://Scenes/Componentes/phone.tscn" id="9_a1i4p"]
[ext_resource type="PackedScene" uid="uid://lcegqjtlylwd" path="res://Scenes/Componentes/jarron.tscn" id="10_84mi4"]
[ext_resource type="PackedScene" uid="uid://cbb7shysawkb8" path="res://Scenes/Componentes/escenario.tscn" id="10_a1i4p"]
[ext_resource type="PackedScene" uid="uid://dtfa8a77sksdk" path="res://Scenes/Componentes/mesa.tscn" id="10_l50oi"]
[ext_resource type="PackedScene" uid="uid://bawjc05gyx2t1" path="res://Scenes/Componentes/lampara.tscn" id="15_84mi4"]
[ext_resource type="PackedScene" uid="uid://b3gedxksqujxh" path="res://Scenes/Componentes/sofa.tscn" id="15_skqsx"]
[ext_resource type="PackedScene" uid="uid://chs8uklp8h7x0" path="res://Scenes/Componentes/cat.tscn" id="17_43er0"]

[sub_resource type="Environment" id="Environment_nsw6b"]
ambient_light_energy = 1.48

[node name="Demo" type="Node3D"]
script = ExtResource("1_tcdmn")

[node name="UI" type="CanvasLayer" parent="."]
process_mode = 3
script = ExtResource("6_qwjex")

[node name="pause_menu" parent="UI" instance=ExtResource("8_lsgl7")]
visible = false

[node name="ambient_crossfade" parent="UI" instance=ExtResource("4_43er0")]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_nsw6b")

[node name="Escenario2" parent="." instance=ExtResource("8_yc4g0")]
transform = Transform3D(0.40097302, 0, 0, 0, 0.40097302, 0, 0, 0, 0.40097302, -81.88017, -1.6798649, 2.1218452)

[node name="Player" parent="." instance=ExtResource("1_nsw6b")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.027, -9.122, -14.581188)

[node name="OutDoor" type="Camera3D" parent="."]
transform = Transform3D(-0.04494856, -0.7235313, 0.6888267, -0.40496847, 0.6435242, 0.6495207, -0.9132252, -0.24975805, -0.32193282, 34.619072, 26.383957, 30.228714)

[node name="Escenario" parent="." instance=ExtResource("10_a1i4p")]

[node name="puerta" parent="Escenario" instance=ExtResource("7_l50oi")]
transform = Transform3D(4, 0, 0, 0, 4, 0, 0, 0, 4, 19.580523, -14.395881, 19.829748)

[node name="SpotLight3D" type="SpotLight3D" parent="Escenario"]
transform = Transform3D(1, 7.450581e-09, 1.3877788e-16, 0, -5.2154064e-08, 1, 7.450581e-09, -1, -5.2154064e-08, -1.2139053, 44.717648, -4.2476416)
light_color = Color(0.7490196, 0.73333335, 0.54509807, 1)
spot_range = 78.303
spot_attenuation = 0.3

[node name="NewsPaper" parent="Escenario" instance=ExtResource("4_f2jw5")]
transform = Transform3D(0.14265335, 0.20530476, 8.9741565e-09, 0, -1.0927847e-08, 0.25, 0.20530476, -0.14265335, -6.2355747e-09, 9.354418, -12.948207, -23.156898)

[node name="NewsPaper2" parent="Escenario" instance=ExtResource("4_f2jw5")]
transform = Transform3D(0.25, 0, 0, 0, 0.25, 0, 0, 0, 0.25, -0.008578539, -8.325777, -20.723816)
visible = false

[node name="Map" parent="Escenario" instance=ExtResource("2_f2jw5")]
transform = Transform3D(0.028612897, 0, -1.499727, 0, 1.5, 0, 1.499727, 0, 0.028612897, 29.524437, -3.2975483, -19.388351)

[node name="Mapa" type="Camera3D" parent="Escenario"]
transform = Transform3D(-4.371139e-08, 0, -1, 0, 1, 0, 1, 0, -4.371139e-08, 15.676136, -2.6688504, -17.473)

[node name="jarron" parent="Escenario" instance=ExtResource("10_84mi4")]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 23.163513, -20.768715, -25.471386)

[node name="Mesa" parent="Escenario" instance=ExtResource("10_l50oi")]
transform = Transform3D(1.5, 0, 0, 0, 1, 0, 0, 0, 1, 0.90527153, -13.492083, -24.399017)

[node name="Radio" parent="Escenario" instance=ExtResource("3_glc8m")]
transform = Transform3D(0.86824214, 0, -0.49614072, 0, 1, 0, 0.49614072, 0, 0.86824214, 7.588849, -12.231735, -27.90455)

[node name="Pc" parent="Escenario" instance=ExtResource("6_yc4g0")]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, -0.057461023, -9.2575865, -28.496647)

[node name="Computer" type="Camera3D" parent="Escenario"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0019283295, -9.184779, -23.43837)

[node name="Phone" parent="Escenario" instance=ExtResource("9_a1i4p")]
transform = Transform3D(1.3937474, 0, 0.5544987, 0, 1.5, 0, -0.5544987, 0, 1.3937474, -7.6146517, -11.461858, -24.79234)

[node name="telefono" type="Camera3D" parent="Escenario"]
transform = Transform3D(0.90819836, -0.049443614, 0.41560936, -0.010402771, 0.9900245, 0.14051214, -0.4184109, -0.1319364, 0.8986242, -5.6808786, -11.811261, -22.475042)

[node name="Sofa" parent="Escenario" instance=ExtResource("15_skqsx")]
transform = Transform3D(-1.3818094e-07, 0, 2, 0, 2, 0, -3.1612113, 0, -8.742278e-08, -25.357618, -19.975285, -7.9936066)

[node name="lampara2" parent="Escenario" instance=ExtResource("15_84mi4")]
transform = Transform3D(0.89412296, 0, -0.4478215, 0, 1, 0, 0.4478215, 0, 0.89412296, -5.9156513, -12.107304, -30.12648)

[node name="cat" parent="Escenario" instance=ExtResource("17_43er0")]
transform = Transform3D(-0.698927, 0.16237885, 0.69651586, -0.020137832, 0.96903074, -0.24611783, -0.71490955, -0.18604468, -0.6740117, -22.913918, -18.229164, -11.0307255)

[connection signal="cafe" from="." to="Escenario/Map" method="_on_demo_cafe"]
[connection signal="descanso" from="." to="Escenario/Map" method="_on_demo_descanso"]
[connection signal="embarcadero" from="." to="Escenario/Map" method="_on_demo_embarcadero"]
[connection signal="entrada" from="." to="Escenario/Map" method="_on_demo_entrada"]
[connection signal="merendero1" from="." to="Escenario/Map" method="_on_demo_merendero_1"]
[connection signal="merendero2" from="." to="Escenario/Map" method="_on_demo_merendero_2"]
[connection signal="mirador" from="." to="Escenario/Map" method="_on_demo_mirador"]
[connection signal="obras" from="." to="Escenario/Map" method="_on_demo_obras"]
[connection signal="parking" from="." to="Escenario/Map" method="_on_demo_parking"]
[connection signal="rescate" from="." to="Escenario/Map" method="_on_demo_rescate"]
[connection signal="input_event" from="Escenario/NewsPaper" to="." method="_on_news_paper_input_event"]
[connection signal="input_event" from="Escenario/NewsPaper2" to="." method="_on_news_paper_input_event"]
[connection signal="input_event" from="Escenario/Map" to="." method="_on_map_input_event"]
[connection signal="input_event" from="Escenario/Radio" to="." method="_on_radio_input_event"]
[connection signal="input_event" from="Escenario/Pc" to="." method="_on_pc_input_event"]
[connection signal="input_event" from="Escenario/Phone" to="." method="_on_phone_input_event"]
